@@ -1,3 +1,9 @@
+Thu Jul  6 13:46:00 MDT 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/conversation-panel.c:
+	* src/fe-gnome/irc-network.c:
+	  - WS & warnings cleanup.
+
 Thu Jul  6 13:01:34 MDT 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/main-window.c:
